<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardSearch"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_margin="16dp"
        app:cardCornerRadius="28dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/image"
                android:src="@android:drawable/ic_menu_search"
                app:tint="@color/dark_gray" />

            <EditText
                android:id="@+id/etSearch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:autofillHints=""
                android:hint="@string/search_contact"
                android:background="@android:color/transparent"
                android:inputType="text" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvNoResults"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/no_results"
        android:textAppearance="?attr/textAppearanceBody1"
        android:gravity="center"
        android:visibility="gone"
        android:textSize="20sp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/cardSearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerContacts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tvNoResults"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="16dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSync"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/sync_contacts"
        android:src="@android:drawable/ic_popup_sync"
        app:backgroundTint="@color/dark_blue"
        app:tint="@android:color/white"
        app:layout_constraintBottom_toTopOf="@id/fabAdd"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add_contact"
        android:src="@android:drawable/ic_input_add"
        app:backgroundTint="@color/dark_blue"
        app:tint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp" />



</androidx.constraintlayout.widget.ConstraintLayout>
