<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/contactFormRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/half_background"
    android:padding="24dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_contact"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnSave"
        app:layout_constraintBottom_toTopOf="@+id/scrollContainer"
        app:layout_constraintHorizontal_bias="0" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:background="@drawable/capsule_dark_blue"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/scrollContainer" />

    <ScrollView
        android:id="@+id/scrollContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imgProfile"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:backgroundTint="@color/light_blue"
                    android:background="@drawable/circle_dark_blue"
                    android:src="@drawable/imageadd"
                    android:layout_marginTop="20dp"
                    android:scaleType="fitCenter"
                    android:padding="20dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/userImage"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:background="@color/light_blue"
                    android:src="@drawable/imageadd"
                    android:scaleType="centerCrop"
                    android:visibility="gone"
                    android:layout_marginTop="20dp"
                    app:shapeAppearanceOverlay="@style/CircleImage"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tvAddPicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_picture"
                android:textColor="@color/black"
                android:textStyle="normal"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/imageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tvFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textColor="@color/dark_gray"
                android:textSize="16sp"
                android:layout_marginTop="24dp"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toBottomOf="@id/tvAddPicture"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/etFirstName"
                style="@style/EditTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:inputType="textPersonName"
                app:layout_constraintTop_toBottomOf="@id/tvFirstName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tvSurname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/surname"
                android:textColor="@color/dark_gray"
                android:textSize="16sp"
                android:layout_marginTop="12dp"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toBottomOf="@id/etFirstName"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/etSurname"
                style="@style/EditTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:maxLines="1"
                app:layout_constraintTop_toBottomOf="@id/tvSurname"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tvCompany"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company"
                android:textColor="@color/dark_gray"
                android:textSize="16sp"
                android:layout_marginTop="12dp"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toBottomOf="@id/etSurname"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/etCompany"
                style="@style/EditTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:maxLines="1"
                app:layout_constraintTop_toBottomOf="@id/tvCompany"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_mobile"
                android:textColor="@color/dark_gray"
                android:textSize="16sp"
                android:layout_marginTop="12dp"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toBottomOf="@id/etCompany"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/etPhone"
                style="@style/EditTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:imeOptions="actionNext"
                android:maxLines="1"
                app:layout_constraintTop_toBottomOf="@id/tvPhone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/dark_gray"
                android:textSize="16sp"
                android:layout_marginTop="12dp"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toBottomOf="@id/etPhone"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/etEmail"
                style="@style/EditTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                app:layout_constraintTop_toBottomOf="@id/tvEmail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="24dp"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressLoader"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:visibility="gone"
        android:indeterminate="true"
        android:indeterminateTint="@color/dark_blue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
